Updated the Home page (deleted destiny pictures, should have been gone ages ago)

--- a/Branch.App/Content/Styles/Home/_index.scss
+++ b/Branch.App/Content/Styles/Home/_index.scss
@@ -76,7 +76,7 @@
 				position: relative;
 
 				&.Halo4 { background-image: url('/Content/Images/Home/Covers/Halo4/cover1.jpg'); }
-				&.Destiny { background-image: url('/Content/Images/Home/Covers/Destiny/cover1.jpg'); }
+				&.Reach { background-image: url('/Content/Images/Home/Covers/Reach/cover1.jpg'); }
 				&.MCC { background-image: url('/Content/Images/Home/Covers/MCC/cover1.jpg'); }
 
 				.game-cover {
@@ -89,7 +89,7 @@
 					height: 100%;
 
 					&.Halo4 { background-image: url('/Content/Images/Home/Covers/Halo4/cover1.jpg'); }
-					&.Destiny { background-image: url('/Content/Images/Home/Covers/Destiny/cover1.jpg'); }
+					&.Reach { background-image: url('/Content/Images/Home/Covers/Reach/cover1.jpg'); }
 					&.MCC { background-image: url('/Content/Images/Home/Covers/MCC/cover1.jpg'); }
 				}
 			}
