--- a/Branch.App/Views/Home/Index.cshtml
+++ b/Branch.App/Views/Home/Index.cshtml
@@ -81,9 +81,26 @@
 			<div class="game-cover Halo4"></div>
 			<div class="mask">
 				<div class="container">
-					<a href="" class="alt">
+					<a href="@Url.Action("Index", "Home", new { area = "Halo4" })" class="alt">
 						<h1>
 							Halo 4 Stats
+						</h1>
+						<p>
+							Service Records, to Game Histories, to Commendation Progress, to In-Depth Game Details.
+						</p>
+					</a>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div id="Reach" class="game" count-data-ref="1">
+		<div class="game-backup-cover Reach">
+			<div class="game-cover Reach"></div>
+			<div class="mask">
+				<div class="container text-right">
+					<a href="@Url.Action("Index", "Home", new { area = "Reach" })" class="alt">
+						<h1>
+							Halo: Reach Stats
 						</h1>
 						<p>
 							Service Records, to Game Histories, to Commendation Progress, to In-Depth Game Details.
@@ -97,7 +114,7 @@
 		<div class="game-backup-cover MCC">
 			<div class="game-cover MCC"></div>
 			<div class="mask soon">
-				<div class="container text-right">
+				<div class="container">
 					<h1>
 						Master Chief Collection Stats
 					</h1>
@@ -113,7 +130,7 @@
 @section scripts
 {
 	<script>
-		var games = ["Halo4", "Destiny", "MCC"];
+		var games = ["Halo4", "Reach", "MCC"];
 		var imagesCount = 4;
 
 		$(document).ready(function() {
