--- a/Branch.App/Content/Styles/Areas/Reach/_file_share.scss
+++ b/Branch.App/Content/Styles/Areas/Reach/_file_share.scss
@@ -81,3 +81,46 @@ body.reach_file_share {
 		}
 	}
 }
+
+body.reach_file_share_file {
+	.file-details {
+		> .preview-image {
+			height: 600px;
+			
+			background-color: #565656;
+			background-size: cover;
+			background-position: center;
+			background-repeat: no-repeat;
+
+			> .icon-overlay{
+				background-repeat: no-repeat;
+				background-size: 80px;
+				background-position: center;
+
+				width: 100%;
+				height: 100%;
+			}
+		}
+
+		> .social-shit {
+			> ul {
+				padding: 0;
+				list-style: none;
+				> li {
+					display: inline;
+					margin-right: 30px;
+
+				}
+			}
+		}
+
+		> .metadata {
+			font-size: 15px;
+
+			span.fuck {
+				color: #989898;
+				font-size: 16px;
+			}
+		}
+	}
+}
