--- a/Branch.App/Content/Styles/application.css
+++ b/Branch.App/Content/Styles/application.css
@@ -1612,4 +1612,28 @@ body.reach_file_share .file-share-container > .file-share-entry > .details {
             body.reach_file_share .file-share-container > .file-share-entry > .details > a > .image-frame > .icon-overlay > .stats > .stats-container > .info-block span {
               font-size: 16px; }
 
+body.reach_file_share_file .file-details > .preview-image {
+  height: 600px;
+  background-color: #565656;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat; }
+  body.reach_file_share_file .file-details > .preview-image > .icon-overlay {
+    background-repeat: no-repeat;
+    background-size: 80px;
+    background-position: center;
+    width: 100%;
+    height: 100%; }
+body.reach_file_share_file .file-details > .social-shit > ul {
+  padding: 0;
+  list-style: none; }
+  body.reach_file_share_file .file-details > .social-shit > ul > li {
+    display: inline;
+    margin-right: 30px; }
+body.reach_file_share_file .file-details > .metadata {
+  font-size: 15px; }
+  body.reach_file_share_file .file-details > .metadata span.fuck {
+    color: #989898;
+    font-size: 16px; }
+
 /*# sourceMappingURL=application.css.map */
