Alot of tweaks xox

--- a/Branch.App/Areas/Reach/Views/FileShare/Index.cshtml
+++ b/Branch.App/Areas/Reach/Views/FileShare/Index.cshtml
@@ -196,5 +196,10 @@
 				<hr />
 			</div>
 		}
+		
+		@if (!Model.FileShare.Files.Any())
+		{
+			<h4>@Model.PublicGamertag hasn't posted anything to their FileShare</h4>
+		}
 	</div>
 </div>
