--- a/Branch.App/Content/Styles/Areas/Reach/_file_share.scss
+++ b/Branch.App/Content/Styles/Areas/Reach/_file_share.scss
@@ -124,3 +124,38 @@ body.reach_file_share_file {
 		}
 	}
 }
+
+body.reach_file_share_recent_screenshots {
+	.file-details {
+		> a {
+			> .preview-image {
+				height: 600px;
+			
+				background-color: #565656;
+				background-size: cover;
+				background-position: center;
+				background-repeat: no-repeat;
+			}
+		}
+
+		> .social-shit {
+			> ul {
+				padding: 0;
+				list-style: none;
+				> li {
+					display: inline;
+					margin-right: 30px;
+				}
+			}
+		}
+
+		> .metadata {
+			font-size: 15px;
+
+			span.fuck {
+				color: #989898;
+				font-size: 16px;
+			}
+		}
+	}
+}
